--- a/src/presentations/components/StoreMarker.css
+++ b/src/presentations/components/StoreMarker.css
@@ -11,6 +11,7 @@
     height: 16px !important;
     border-radius: 50%;
     opacity: 0.88;
+    box-shadow: 0 0 2px 2px $color-shadow;
   }
 
   .StoreMarker--Name {
