--- a/src/presentations/pages/Maps/index.css
+++ b/src/presentations/pages/Maps/index.css
@@ -38,6 +38,14 @@ body {
   &.Modal__Hidden {
     transform: translateY(100%);
   }
+
+  .Modal--CloseButton {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 12px;
+    z-index: 1;
+  }
 }
 
 @media screen and (min-width: calc($width-map-modal * 2)) {
