--- a/src/presentations/pages/Maps/index.pug
+++ b/src/presentations/pages/Maps/index.pug
@@ -14,6 +14,10 @@ block body
       +Map
       if props.store
         .Modal
+          .Modal--CloseButton
+            .Icon close
           +StoreCard(props.store, props.currentDay, props.openStatus, props.nextStatusMessage)
       else
         .Modal.Modal__Hidden
+          .Modal--CloseButton
+            .Icon close
