Add STORES to Navigation

--- a/src/presentations/components/Navigation.pug
+++ b/src/presentations/components/Navigation.pug
@@ -7,3 +7,5 @@ mixin Navigation(props)
         a.Navigation--List--Item--Link(href="/foods")= dic.t('Components.Navigation.FOODS')
       li.Navigation--List--Item(class= props.path.indexOf('/goods') === 0 ? 'Navigation--List--Item__Active' : '')
         a.Navigation--List--Item--Link(href="/goods")= dic.t('Components.Navigation.GOODS')
+      li.Navigation--List--Item(class= props.path.indexOf('/maps') === 0 ? 'Navigation--List--Item__Active' : '')
+        a.Navigation--List--Item--Link(href="/maps")= dic.t('Components.Navigation.STORES')
