--- a/src/presentations/pages/Maps/index.css
+++ b/src/presentations/pages/Maps/index.css
@@ -1,5 +1,7 @@
 @import 'application/vars';
 @import 'components/Map';
+@import 'components/MapHeader';
+@import 'components/Modal';
 @import 'components/StoreCard';
 @import 'components/StoreMarker';
 
@@ -17,51 +19,5 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
-  }
-}
-
-.Modal {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: unset;
-  width: 100%;
-  height: auto;
-  max-height: 100%;
-  overflow: scroll;
-  background: $color-white;
-  z-index: 4000;
-  transform: translateY(0);
-  transition: transform 170ms ease-in-out;
-  box-shadow: 0 0 2px 2px $color-shadow;
-
-  &.Modal__Hidden {
-    transform: translateY(100%);
-  }
-
-  .Modal--CloseButton {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 12px;
-    z-index: 1;
-  }
-}
-
-@media screen and (min-width: calc($width-map-modal * 2)) {
-  .Modal {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: auto;
-    height: 100%;
-    background: $color-white;
-    z-index: 4000;
-    transform: translateX(0);
-    transition: transform 170ms ease-in-out;
-
-    &.Modal__Hidden {
-      transform: translateX(-100%);
-    }
   }
 }
