--- a/src/presentations/components/StoreCard.css
+++ b/src/presentations/components/StoreCard.css
@@ -12,6 +12,7 @@
       font-weight: $font-bold;
       font-size: 1.5rem;
       padding-bottom: 8px;
+      text-align: left;
     }
 
     .StoreCard--Content--Address {
