--- a/src/presentations/components/Footer.pug
+++ b/src/presentations/components/Footer.pug
@@ -2,7 +2,7 @@ mixin Footer
   footer.Footer
     ul.Footer--List
       li.Footer--List--Item
-        a(href="/about-us")= dic.t('Components.Footer.ABOUT_US')
+        a(href="/about")= dic.t('Components.Footer.ABOUT')
       li.Footer--List--Item
         a(href="/sitemap")= dic.t('Components.Footer.SITEMAP')
       li.Footer--List--Item
