--- a/src/presentations/pages/About/index.pug
+++ b/src/presentations/pages/About/index.pug
@@ -6,10 +6,10 @@ block import
   include /components/Navigation
 
 block meta
-  link(rel="stylesheet" href="/pages/AboutUs/index.css")
+  link(rel="stylesheet" href="/pages/About/index.css")
 
 block body
-  .AboutUs
+  .About
     +Header(props.header)
     +Navigation(props.navigation)
     h1= title
