Create about page

--- a/src/presentations/pages/About/index.pug
+++ b/src/presentations/pages/About/index.pug
@@ -12,5 +12,7 @@ block body
   .About
     +Header(props.header)
     +Navigation(props.navigation)
-    h1= title
+    .About--Content
+      .About--Content--Title= dic.t('Pages.About.ABOUT')
+      .About--Content--Text!= dic.t('Pages.About.text')
     +Footer
