--- a/src/presentations/application/Layout.pug
+++ b/src/presentations/application/Layout.pug
@@ -19,6 +19,7 @@ html(lang=props.lang)
     link(rel="alternate" type="application/rss+xml" title="RSS 2.0" href=`/rss?lang=${props.lang}`)
     link(rel="contents" href="/sitemap.xml")
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
+    link(rel="icon" href=`/images/icon_${props.lang}_circle.png` type="image/png")
 
     meta(name="theme-color" content="white")
 
