--- a/src/presentations/pages/Maps/index.css
+++ b/src/presentations/pages/Maps/index.css
@@ -19,5 +19,28 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
+
+    .Maps--Content--CurrentPositionButton {
+      position: absolute;
+      right: 16px;
+      bottom: 32px;
+      padding: 10px;
+      z-index: 4000;
+      background: $color-white;
+      box-shadow: 0 0 2px 1px $color-shadow;
+      cursor: pointer;
+    }
   }
+}
+
+.CurrentPostionMarker {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: inline-block;
+  background: #2196f3;
+  width: 16px !important;
+  height: 16px !important;
+  border-radius: 50%;
+  box-shadow: 0 0 2px 2px $color-shadow;
 }
