--- a/src/presentations/components/Navigation.pug
+++ b/src/presentations/components/Navigation.pug
@@ -1,11 +1,13 @@
 mixin Navigation(props)
   nav.Navigation
     ul.Navigation--List
-      li.Navigation--List--Item(class= props.path.indexOf('/beverages') === 0 ? 'Navigation--List--Item__Active' : '')
-        a.Navigation--List--Item--Link(href="/beverages")= dic.t('Components.Navigation.BEVERAGES')
-      li.Navigation--List--Item(class= props.path.indexOf('/foods') === 0 ? 'Navigation--List--Item__Active' : '')
-        a.Navigation--List--Item--Link(href="/foods")= dic.t('Components.Navigation.FOODS')
-      li.Navigation--List--Item(class= props.path.indexOf('/goods') === 0 ? 'Navigation--List--Item__Active' : '')
-        a.Navigation--List--Item--Link(href="/goods")= dic.t('Components.Navigation.GOODS')
+      //- li.Navigation--List--Item(class= props.path.indexOf('/beverages') === 0 ? 'Navigation--List--Item__Active' : '')
+      //-   a.Navigation--List--Item--Link(href="/beverages")= dic.t('Components.Navigation.BEVERAGES')
+      //- li.Navigation--List--Item(class= props.path.indexOf('/foods') === 0 ? 'Navigation--List--Item__Active' : '')
+      //-   a.Navigation--List--Item--Link(href="/foods")= dic.t('Components.Navigation.FOODS')
+      //- li.Navigation--List--Item(class= props.path.indexOf('/goods') === 0 ? 'Navigation--List--Item__Active' : '')
+      //-   a.Navigation--List--Item--Link(href="/goods")= dic.t('Components.Navigation.GOODS')
+      li.Navigation--List--Item(class= props.path.indexOf('/about') === 0 ? 'Navigation--List--Item__Active' : '')
+        a.Navigation--List--Item--Link(href="/about")= dic.t('Components.Navigation.ABOUT')
       li.Navigation--List--Item(class= props.path.indexOf('/maps') === 0 ? 'Navigation--List--Item__Active' : '')
         a.Navigation--List--Item--Link(href="/maps")= dic.t('Components.Navigation.STORES')
