--- a/src/data/posts/post1-content.en.pug
+++ b/src/data/posts/post1-content.en.pug
@@ -1,1 +1,18 @@
-h1 Test
+p
+  | I started to make COFFEE HANDBOOK.
+  br
+  | I write down about coffee, space and thinking stuffs.
+  br
+  | COFFEE HANDBOOK is made by individual step by step.
+  | When I did some mistake and you have recommendations, please give me feedbacks and advices.
+  | You can contact me on Twitter, GitHub and so on.
+  br
+  a(href=config.githubUrl) [GitHub]
+  a(href=`https://twitter.com/${config.twitterAccount}`) [Twitter]
+  br
+  | If you want to contribute me or this site, you can support using Patreon. Thank you.
+  br
+  a(href=config.patreonUrl) [Patreon - Support]
+  br
+  | I will share about this site, why I started this and technology of this site.
+  | Thank you.
