--- a/src/data/posts/post1-content.ja.pug
+++ b/src/data/posts/post1-content.ja.pug
@@ -1,1 +1,16 @@
-h1 テスト
+p
+  | 珈琲手帖をはじめました。
+  br
+  | コーヒーのこと、空間のこと。ふと思うことを書き留めます。
+  br
+  | この、珈琲手帖。少しずつ、個人で制作しています。
+  | 間違った情報や、おすすめなどあれば、ぜひTwitterやGitHubから教えてください！
+  br
+  a(href=config.githubUrl) [GitHub]
+  a(href=`https://twitter.com/${config.twitterAccount}`) [Twitter]
+  br
+  | 個人制作のため、現実的な金銭の部分でご支援もお待ちしています！
+  br
+  a(href=config.patreonUrl) [Patreon - 支援]
+  br
+  | このサイトのことや、どうしてこういう取り組みをはじめたか、技術的なことなど少しずつ発信したいと思います。
