--- a/src/presentations/pages/Privacy/index.pug
+++ b/src/presentations/pages/Privacy/index.pug
@@ -13,77 +13,68 @@ block body
     +Header(props.header)
     +Navigation(props.navigation)
     .Privacy--Content
-      .Privacy--Content--Title 個人情報保護方針
+      .Privacy--Content--Title 利用規約・プライバシーポリシー
 
       .Privacy--Content--Description
-        |珈琲手帖・Coffee Handbook（以下「当サイト」）は、ユーザの個人情報をお預かりするにあたり、以下のとおり個人情報保護方針を定め、個人情報保護の仕組みを構築します。
-        |当サイトは個人情報に関する法令を遵守し、個人情報保護の重要性の認識と取組みを徹底し、個人情報の適切な取扱いと保護を推進致します。
+        |このページは、珈琲手帖・Coffee Handbook（https://coffee-handbook.com、以下「当サイト」とします）の利用者（以下「ユーザ」とします）の個人情報取り扱い、その他当サイトの運営に関する指針を示すものです。
+
+      .Privacy--Content--List
+        .Privacy--Content--List--Heading お問い合わせ先
+        .Privacy--Content--List--Content
+          |当サイト公式Twitterの
+          a(href="https://twitter.com/@coffeehandbook_") ダイレクトメール
+          |より承ります。
 
       .Privacy--Content--List
         .Privacy--Content--List--Heading 個人情報の取得
         .Privacy--Content--List--Content
-          |当サイトは、適正に個人情報を取得いたします。
+          |当サイトでは、お問い合わせや当サイトへのご意見をいただく際に、必要と考えられる最小限の個人情報の開示をお願いする場合がございます。
+
+      .Privacy--Content--List
+        .Privacy--Content--List--Heading 個人情報の利用目的
+        .Privacy--Content--List--Content
+          |開示いただいた個人情報は、問い合わせに対する回答および必要な情報を連絡する場合に利用するものであり、これ以外の目的では利用いたしません。
 
       .Privacy--Content--List
         .Privacy--Content--List--Heading 個人情報の管理
         .Privacy--Content--List--Content
-          |当サイトは、お客さまの個人情報を正確かつ最新の状態に保ち、個人情報への不正アクセス・紛失・破損・改ざん・漏洩などを防止するため、セキュリティシステムの維持・管理体制の整備・社員教育の徹底等の必要な措置を講じ、安全対策を実施し個人情報の厳重な管理を行ないます。
-          |個人情報の利用目的
-          |当サイトは、個人情報を以下の目的のために利用いたします。
+          |ユーザの個人情報に対する管理責任者を置き、外部からの不正なアクセス、紛失、破壊、改竄などの危険に対して、適切なレベルの安全対策を実施します。
+          br
+          |また、業務委託契約を締結する際には、業務委託の相手としての適格性を十分審査し、個人情報の保護に配慮した契約書の内容に基づく業務委託契約を締結いたします。
 
       .Privacy--Content--List
-        .Privacy--Content--List--Heading 当サイトからのご連絡や業務のご案内やご質問に対する回答
+        .Privacy--Content--List--Heading 個人情報の照会
         .Privacy--Content--List--Content
-          |ご注文いだいた商品を発送する場合
-          |当サイト主催の催し物、商品、サービスに関する情報提供
+          |お預かりした個人情報の開示、訂正、削除をご希望の場合には、ご本人であることを確認のうえ、速やかに対応いたします。
 
       .Privacy--Content--List
-        .Privacy--Content--List--Heading 個人情報の第三者への開示・提供の禁止
+        .Privacy--Content--List--Heading 個人情報の第三者への開示
         .Privacy--Content--List--Content
-          |当サイトは、お客さまよりお預かりした個人情報を適切に管理し、次のいずれかに該当する場合を除き、個人情報を第三者に開示いたしません。
+          |当サイトでは、次のいずれかに該当する場合を除き、個人情報を第三者に開示することはありません。
+          ul
+            li ・ユーザ本人からの了承がある場合
+            li ・法令等への協力のため、開示が必要となる場合
 
       .Privacy--Content--List
-        .Privacy--Content--List--Heading お客さまの同意がある場合
+        .Privacy--Content--List--Heading アクセス解析ツールの使用について
         .Privacy--Content--List--Content
-          |お客さまが希望されるサービスを行なうために当サイトが業務を委託する業者に対して開示する場合
-          |法令に基づき開示することが必要である場合
+          |当サイトでは、コンテンツの拡充や改善を目的とし、Googleアナリティクスを使用しています。
+          |このアクセス解析ツールでは、Cookie（氏名、住所、メール アドレス、電話番号は含まれません）を使用してユーザのトラフィックデータを収集します。
+          |お使いのブラウザでアナリティクスが使用されないようにしたい場合は、
+          a(href="https://tools.google.com/dlpage/gaoptout?hl=ja") Googleアナリティクスブラウザアドオン
+          |をインストールしてください。<br>
+          br
+          |詳しくは、下記リンク先の説明をご確認ください。
+          ul
+            li: a(href="https://support.google.com/analytics/answer/6004245?hl=ja") Google アナリティクスとプライバシーについて
+            li: a(href="https://www.google.com/intl/ja/policies/privacy/partners/") ユーザーがGoogleパートナーのサイトやアプリを使用する際のGoogleによるデータ使用
 
       .Privacy--Content--List
-        .Privacy--Content--List--Heading 個人情報の安全管理
+        .Privacy--Content--List--Heading 利用規約・プライバシーポリシーの改訂について
         .Privacy--Content--List--Content
-          |当サイトは、個人情報の漏えい・紛失防止のため、また正確性及び安全性確保のために、セキュリティに万全の対策を講じています。
-
-      .Privacy--Content--List
-        .Privacy--Content--List--Heading ご本人の照会
-        .Privacy--Content--List--Content
-          |お客さまがご本人の個人情報の照会・修正・削除などをご希望される場合には、ご本人であることを確認の上、対応させていただきます。
-
-      .Privacy--Content--List
-        .Privacy--Content--List--Heading 法令、規範の遵守と見直し
-        .Privacy--Content--List--Content
-          |当サイトは、保有する個人情報に関して適用される日本の法令を遵守するとともに、本ポリシーの内容を適宜見直し、その改善に努めます。
-
-      .Privacy--Content--List
-        .Privacy--Content--List--Heading 当サイトに掲載されている広告について
-        .Privacy--Content--List--Content
-          |当サイトでは、第三者配信の広告サービス（Googleアドセンス、A8.net、Amazonアソシエイトなど）を利用しています。
-          |このような広告配信事業者は、ユーザーの興味に応じた商品やサービスの広告を表示するため、当サイトや他サイトへのアクセスに関する情報 『Cookie』(氏名、住所、メール アドレス、電話番号は含まれません) を使用することがあります。
-          |またGoogleアドセンスに関して、このプロセスの詳細やこのような情報が広告配信事業者に使用されないようにする方法については、
-          a(href="https://policies.google.com/technologies/ads") こちら
-          |をご覧ください。
-
-      .Privacy--Content--List
-        .Privacy--Content--List--Heading 当サイトが使用しているアクセス解析ツールについて
-        .Privacy--Content--List--Content
-          |当サイトでは、Googleによるアクセス解析ツール「Googleアナリティクス」を利用しています。
-          |このGoogleアナリティクスはトラフィックデータの収集のためにCookieを使用しています。
-          |このトラフィックデータは匿名で収集されており、個人を特定するものではありません。
-          |この機能はCookieを無効にすることで収集を拒否することが出来ますので、お使いのブラウザの設定をご確認ください。
-          |この規約に関して、詳しくは
-          a(href="https://www.google.com/analytics/terms/jp.html") こちら
-          |をご覧ください。
+          |当サイトの提供するコンテンツの変更、法令その他の規範の変更に伴い、利用規約・プライバシーポリシーを予告なく改訂する場合がございます。予めご了承ください。
 
       .Privacy--Content--Date
         .Privacy--Content--Date--Text 制定日：2018年08月22日
-        .Privacy--Content--Date--Text 最終改訂日：2018年08月22日
+        .Privacy--Content--Date--Text 最終改訂日：2018年10月14日
     +Footer
