--- a/src/presentations/pages/Privacy/index.pug
+++ b/src/presentations/pages/Privacy/index.pug
@@ -16,13 +16,13 @@ block body
       .Privacy--Content--Title 利用規約・プライバシーポリシー
 
       .Privacy--Content--Description
-        |このページは、珈琲手帖・Coffee Handbook（https://coffee-handbook.com、以下「当サイト」とします）の利用者（以下「ユーザ」とします）の個人情報取り扱い、その他当サイトの運営に関する指針を示すものです。
+        |このページは、珈琲手帖・COFFEE HANDBOOK（https://coffee-handbook.com、以下「当サイト」とします）の利用者（以下「ユーザ」とします）の個人情報取り扱い、その他当サイトの運営に関する指針を示すものです。
 
       .Privacy--Content--List
         .Privacy--Content--List--Heading お問い合わせ先
         .Privacy--Content--List--Content
           |当サイト公式Twitterの
-          a(href="https://twitter.com/@coffeehandbook_") ダイレクトメール
+          a(href=props.twitterLink) ダイレクトメール
           |より承ります。
 
       .Privacy--Content--List
