--- a/src/presentations/application/Layout.new.pug
+++ b/src/presentations/application/Layout.new.pug
@@ -12,7 +12,6 @@ html(lang=props.lang)
     meta(name="description" content=props.description)
     meta(name="author" content=props.author)
     meta(name="keywords" content=props.keywords.join(','))
-    link(rel="alternate" type="application/rss+xml" title="RSS 2.0" href=`/rss?lang=${props.lang}`)
     link(rel="contents" href="/sitemap.xml")
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
     link(rel="icon" href=`/images/icon_${props.lang}_circle.png` type="image/png")
@@ -23,7 +22,7 @@ html(lang=props.lang)
     meta(property="og:site_name" content=props.name)
     meta(property="og:title" content=props.title)
     meta(property="og:description" content=props.description)
-    meta(property="og:image" content=props.image)
+    meta(property="og:image" content=props.images.rectangle[props.lang])
     meta(property="og:type" content=props.pageType)
     meta(property="og:url" content=`${props.baseUrl}${props.path}?lang=${props.lang}`)
     //- Facebook
@@ -32,7 +31,7 @@ html(lang=props.lang)
     //- Twitter
     meta(property="twitter:title" content=props.title)
     meta(property="twitter:description" content=props.description)
-    meta(property="twitter:image" content=props.image)
+    meta(property="twitter:image" content=props.images.square[props.lang])
     meta(property="twitter:card" content=props.twitterCardType)
     meta(property="twitter:site" content=props.twitterAccount)
     meta(property="twitter:url" content=`${props.baseUrl}${props.path}?lang={props.lang}`)
