--- a/src/presentations/components/StoreMarker.css
+++ b/src/presentations/components/StoreMarker.css
@@ -3,6 +3,10 @@
   cursor: pointer;
 
   &.StoreMarker__Mark {
+    .StoreMarker--Icon {
+      width: 8px !important;
+      height: 8px !important;
+    }
     .StoreMarker--Name {
       display: none;
     }
@@ -18,6 +22,7 @@
     height: 16px !important;
     border-radius: 50%;
     box-shadow: 0 0 2px 2px $color-shadow;
+    transition: width 200ms ease-in, height 200ms ease-in;
   }
 
   .StoreMarker--Name {
