--- a/src/presentations/pages/Privacy/index.pug
+++ b/src/presentations/pages/Privacy/index.pug
@@ -14,7 +14,7 @@ block body
       .Privacy--Content--Title 利用規約・プライバシーポリシー
 
       .Privacy--Content--Description
-        |このページは、珈琲手帖・COFFEE HANDBOOK（#{props.url}、以下「当サイト」とします）の利用者（以下「ユーザ」とします）の個人情報取り扱い、その他当サイトの運営に関する指針を示すものです。
+        |このページは、珈琲手帖・COFFEE HANDBOOK（#{props.baseUrl}、以下「当サイト」とします）の利用者（以下「ユーザ」とします）の個人情報取り扱い、その他当サイトの運営に関する指針を示すものです。
 
       .Privacy--Content--List
         .Privacy--Content--List--Heading お問い合わせ先
