--- a/src/presentations/application/Layout.new.pug
+++ b/src/presentations/application/Layout.new.pug
@@ -6,7 +6,7 @@ html(lang=props.lang)
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=5, minimum-scale=1, user-scalable=yes, viewport-fit=cover")
     link(rel="manifest" href='/manifest.json')
-    link(rel="stylesheet" href="/application/index.css")
+    link(rel="stylesheet" href="/application/index.css"  media="screen")
 
     link(rel="alternate" hreflang="en" href=props.url.en)
     link(rel="alternate" hreflang="ja" href=props.url.ja)
@@ -19,6 +19,10 @@ html(lang=props.lang)
     link(rel="contents" href="/sitemap.xml")
     link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
     link(rel="icon" href=`/images/icon_${props.lang}_circle.png` type="image/png")
+    link(rel="preconnect" href="//www.mapbox.com" crossorigin)
+    link(rel="preconnect" href="//www.openstreetmap.com" crossorigin)
+    link(rel="preconnect" href="//events.mapbox.com" crossorigin)
+    link(rel="preconnect" href="//www.google-analytics.com" crossorigin)
 
     meta(name="theme-color" content="white")
 
@@ -57,8 +61,8 @@ html(lang=props.lang)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     script(src=props.entrypoint defer)
     script(src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.js", defer)
-    link(rel="stylesheet" href=props.stylesheet)
-    link(href='https://api.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css' rel='stylesheet')
+    link(rel="stylesheet" href=props.stylesheet media="screen")
+    link(href="https://api.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" media="screen")
     script
       include ../../public/application/bundle.js
   body
