Separate mobile and desktop version

--- a/src/presentations/pages/Maps/index.css
+++ b/src/presentations/pages/Maps/index.css
@@ -1,5 +1,5 @@
 @import 'application/vars';
-@import 'components/MapHeader';
+@import 'containers/MapHeader';
 @import 'components/StoreMapView';
 @import 'components/StoreCard';
 @import 'components/StoreMarker';
