--- a/src/presentations/components/StoreMapView.css
+++ b/src/presentations/components/StoreMapView.css
@@ -1,4 +1,37 @@
 .StoreMapView {
+  position: relative;
   width: 100%;
   height: 100%;
+
+  .StoreMapView--Map {
+    width: 100%;
+    height: 100%;
+  }
+
+  .StoreMapView--CurrentPositionButton {
+    position: absolute;
+    right: 16px;
+    bottom: 32px;
+    padding: 10px;
+    z-index: 4000;
+    background: $color-white;
+    box-shadow: 0 0 2px 1px $color-shadow;
+    cursor: pointer;
+  }
+}
+
+.CurrentPostionMarker {
+  position: relative;
+
+  .CurrentPostionMarker--Icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: inline-block;
+    background: #2196f3;
+    width: 16px !important;
+    height: 16px !important;
+    border-radius: 50%;
+    box-shadow: 0 0 2px 2px $color-shadow;
+  }
 }
