--- a/src/presentations/pages/Maps/desktop/index.css
+++ b/src/presentations/pages/Maps/desktop/index.css
@@ -1,5 +1,6 @@
 @import 'application/vars';
 @import 'containers/MapHeader';
+@import 'containers/CurrentPositionButton';
 @import 'components/StoreMapView';
 @import 'components/StoreCard';
 @import 'components/StoreMarker';
@@ -9,26 +10,15 @@ body {
   height: 100%;
 }
 
-.MapsPage {
+.MapsDesktopPage {
   width: 100%;
   height: 100%;
   overflow: hidden;
 
-  .MapsPage--Content {
+  .MapsDesktopPage--Content {
     position: relative;
     width: 100%;
     height: 100%;
-
-    .MapsPage--Content--CurrentPositionButton {
-      position: absolute;
-      right: 16px;
-      bottom: 32px;
-      padding: 10px;
-      z-index: 4000;
-      background: $color-white;
-      box-shadow: 0 0 2px 1px $color-shadow;
-      cursor: pointer;
-    }
   }
 }
 
