--- a/src/presentations/application/Layout.new.pug
+++ b/src/presentations/application/Layout.new.pug
@@ -59,8 +59,8 @@ html(lang=props.lang)
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    script(src="/vendors.js" defer)
-    script(src="/commons.js" defer)
+    script(src="/commons/vendors.js" defer)
+    script(src="/commons/index.js" defer)
     script(src=props.entrypoint defer)
     link(rel="stylesheet" href=props.stylesheet media="screen")
     link(href="https://api.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" media="screen")
