--- a/src/presentations/application/application.css
+++ b/src/presentations/application/application.css
@@ -32,6 +32,13 @@ a {
   height: 100%;
 }
 
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/materialicons/v41/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2');
+}
+
 .Icon {
   font-family: 'Material Icons';
   font-weight: normal;
