--- a/src/presentations/application/Layout.new.pug
+++ b/src/presentations/application/Layout.new.pug
@@ -17,10 +17,6 @@ html(lang=props.lang)
     meta(name="keywords" content=props.keywords.join(','))
     link(rel="contents" href="/sitemap.xml")
     link(rel="icon" href=`/images/icon_${props.lang}_circle.png` type="image/png")
-    link(rel="preconnect" href="//www.mapbox.com" crossorigin)
-    link(rel="preconnect" href="//www.openstreetmap.com" crossorigin)
-    link(rel="preconnect" href="//events.mapbox.com" crossorigin)
-    link(rel="preconnect" href="//www.google-analytics.com" crossorigin)
 
     meta(name="theme-color" content="white")
 
@@ -42,8 +38,11 @@ html(lang=props.lang)
     meta(property="twitter:site" content=props.twitterAccount)
     meta(property="twitter:url" content=`${props.baseUrl}${props.path}`)
 
-    script(type="application/ld+json").
-      !{JSON.stringify(props.jsonLD)}
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     script.
       window.options = {
         env: '#{props.env}',
@@ -51,20 +50,24 @@ html(lang=props.lang)
         gaCode: '#{props.gaCode}',
         route: '#{props.route}',
       };
-      window.state = !{JSON.stringify(props.state)};
+    script
+      include ../../public/application/bundle.js
+
+    // For maps page
+    link(rel="preconnect" href="//www.mapbox.com" crossorigin)
+    link(rel="preconnect" href="//www.openstreetmap.com" crossorigin)
+    link(rel="preconnect" href="//events.mapbox.com" crossorigin)
+    link(rel="preconnect" href="//www.google-analytics.com" crossorigin)
+
     script.
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      window.state = !{JSON.stringify(props.state)};
     script(src="/commons/vendors.js" defer)
     script(src="/commons/index.js" defer)
     script(src=props.entrypoint defer)
-    style
-      include ../../public/application/index.css
-      include ../../public/pages/Maps/mobile/index.css
-    script
-      include ../../public/application/bundle.js
+    script(type="application/ld+json").
+      !{JSON.stringify(props.jsonLD)}
+    link(href="/application/index.css" rel="stylesheet" media="screen")
+    link(href=props.stylesheet rel="stylesheet" media="screen")
     link(href="https://api.mapbox.com/mapbox-gl-js/v0.50.0/mapbox-gl.css" rel="stylesheet" media="screen")
   body
     .application
