--- a/src/presentations/application/Layout.pug
+++ b/src/presentations/application/Layout.pug
@@ -12,16 +12,15 @@ html(lang=props.lang)
     link(rel="manifest" href='/manifest.json')
     link(rel="stylesheet" href="/application/index.css")
 
-    link(rel="alternate" hreflang="en" href=props.url.en)
-    link(rel="alternate" hreflang="ja" href=props.url.ja)
-    link(rel="alternate" hreflang="x-default" href=props.url.en)
+    link(rel="alternate" hreflang="en" href=`${props.url.en}${props.path}`)
+    link(rel="alternate" hreflang="ja" href=`${props.url.ja}${props.path}`)
+    link(rel="alternate" hreflang="x-default" href=`${props.url.en}${props.path}`)
 
     title= props.title
     meta(name="description" content=props.description)
     meta(name="author" content=props.author)
     meta(name="keywords" content=props.keywords.join(','))
     link(rel="contents" href="/sitemap.xml")
-    link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
     link(rel="icon" href=`/images/icon_${props.lang}_circle.png` type="image/png")
 
     meta(name="theme-color" content="white")
@@ -45,17 +44,17 @@ html(lang=props.lang)
     meta(property="twitter:url" content=`${props.baseUrl}${props.path}`)
 
     script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    script.
       window.options = {
         env: '#{props.env}',
         lang: '#{props.lang}',
         gaCode: '#{props.gaCode}',
         route: '#{props.route}',
       };
-    script.
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     script
       include ../../public/application/bundle.js
     block meta
