--- a/src/presentations/components/StoreMarker.css
+++ b/src/presentations/components/StoreMarker.css
@@ -22,7 +22,21 @@
     height: 16px !important;
     border-radius: 50%;
     box-shadow: 0 0 2px 2px $color-shadow;
-    transition: width 200ms ease-in, height 200ms ease-in;
+
+    &:after {
+      position: absolute;
+      top: 8px;
+      left: 8px;
+      z-index: -1;
+      content: '';
+      display: inline-block;
+      width: 0px;
+      height: 0px;
+      background: $color-white;
+      border-radius: 50%;
+      box-shadow: 0 0 2px 2px $color-shadow;
+      transition: width $short ease-in-out, height $short ease-in-out, top $short ease-in-out, left $short ease-in-out;
+    }
   }
 
   .StoreMarker--Name {
@@ -31,5 +45,18 @@
     display: inline-block;
     font-weight: $font-bold;
     white-space: nowrap;
+  }
+
+  &.StoreMarker__Active {
+    .StoreMarker--Icon {
+      box-shadow: none;
+
+      &:after {
+        top: -2px;
+        left: -2px;
+        width: 20px;
+        height: 20px;
+      }
+    }
   }
 }
