--- a/src/presentations/pages/Maps/mobile/index.css
+++ b/src/presentations/pages/Maps/mobile/index.css
@@ -1,6 +1,8 @@
 @import 'application/vars';
 @import 'containers/MapHeader';
 @import 'containers/CurrentPositionButton';
+@import 'containers/SearchForm';
+@import 'components/Sheet';
 @import 'components/StoreMapView';
 @import 'components/StoreCard';
 @import 'components/StoreMarker';
