--- a/src/presentations/pages/Maps/mobile/index.css
+++ b/src/presentations/pages/Maps/mobile/index.css
@@ -45,3 +45,47 @@ body {
     transform: translateY(100%);
   }
 }
+
+.StoreCards {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 1;
+  overscroll-behavior-y: contain;
+
+  .StoreCards--List {
+    display: flex;
+    padding: 0 0 48px;
+    scroll-snap-type: x mandatory;
+    overflow: scroll;
+
+    .StoreCards--List--Item {
+      $width: calc(100% - 12px);
+      flex: 1;
+      width: $width;
+      min-width: $width;
+      max-width: $width;
+      scroll-snap-align: center;
+
+      .StoreCards--List--Item--Content {
+        background: $color-white;
+        padding: 12px;
+        border-radius: 12px;
+        margin: 0 6px;
+        box-shadow: $shadow;
+      }
+
+      &:first-of-type {
+        .StoreCards--List--Item--Content {
+          margin: 0 0 0 12px;
+        }
+      }
+
+      &:last-of-type {
+        .StoreCards--List--Item--Content {
+          margin: 0 12px 0 0;
+        }
+      }
+    }
+  }
+}
